--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <div>
-      <h1>Ashutosh Singh</h1>
-      <h2>1001415990</h2>
+      <h1>Akshay Kumar</h1>
+      <h2>1001511787</h2>
     </div>
     <div class="container">
       {% block body %}{% endblock %}
