--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div>
-      <h1>Akshay  Kumar</h1>
+      <h1>AKSHAY  KUMAR</h1>
       <h2>1001511787</h2>
     </div>
     <div class="container">
